mdapi/Custom/objects/Renewal__c.object
<CustomObject>
    <fields>
        <fullName>MTM_Extension_Reason__c</fullName>
        <label>MTM Extension Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tenant circumstances (see details)</fullName>
                </value>
                <value>
                    <fullName>Portfolio Level Load</fullName>
                </value>
                <value>
                    <fullName>Submarket Considerations</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTM_Fee_Amount__c</fullName>
        <label>MTM Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTM_Fee_Per_Yardi__c</fullName>
        <formula>Lease__r.MTM_Fee_Amount_Yardi__c</formula>
        <label>MTM Fee Per Yardi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTM_Fee_Start_Date__c</fullName>
        <label>MTM Fee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MTM_Reason_Details__c</fullName>
        <label>MTM Reason Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTM_per_Yardi__c</fullName>
        <formula>Lease__r.Month_to_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTM per Yardi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Text(Portfolio__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Last_Month__c</fullName>
        <formula>IF(MONTH( TODAY()) =12, 11, 
IF(MONTH( TODAY()) = 1, 12, 
IF(MONTH( TODAY()) = 2, 1,
IF(MONTH( TODAY()) = 3, 2,
IF(MONTH( TODAY()) = 4, 3,
IF(MONTH( TODAY()) = 5, 4,
IF(MONTH( TODAY()) = 6, 5,
IF(MONTH( TODAY()) = 7, 6,
IF(MONTH( TODAY()) = 8, 7,
IF(MONTH( TODAY()) = 9, 8,
IF(MONTH( TODAY()) = 10, 9,
IF(MONTH( TODAY()) = 11, 10,
0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month - Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Lease_End_Date__c</fullName>
        <formula>Month( Lease_End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month - Lease End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Next_Month__c</fullName>
        <formula>IF(MONTH( TODAY()) =12, 1, 
IF(MONTH( TODAY()) = 1, 2, 
IF(MONTH( TODAY()) = 2, 3,
IF(MONTH( TODAY()) = 3, 4,
IF(MONTH( TODAY()) = 4, 5,
IF(MONTH( TODAY()) = 5, 6,
IF(MONTH( TODAY()) = 6, 7,
IF(MONTH( TODAY()) = 7, 8,
IF(MONTH( TODAY()) = 8, 9,
IF(MONTH( TODAY()) = 9, 10,
IF(MONTH( TODAY()) = 10, 11,
IF(MONTH( TODAY()) = 11, 12,
0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month - Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Today__c</fullName>
        <formula>MONTH( TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month - Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <formula>Lease__r.Move_In_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move-In Date (from Yardi)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Comments__c</fullName>
        <label>Move-Out Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date_from_Yardi__c</fullName>
        <formula>Lease__r.Move_Out_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move-Out Date (from Yardi )</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Inspection_Date__c</fullName>
        <label>Move-Out Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Reason_Yardi__c</fullName>
        <formula>Lease__r.Move_Out_Reason_Yardi__c</formula>
        <label>Move-Out Reason (Yardi)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Reason__c</fullName>
        <label>Move-Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired Pet</fullName>
                </value>
                <value>
                    <fullName>Another Community</fullName>
                </value>
                <value>
                    <fullName>Bought Home/Condo/TH</fullName>
                </value>
                <value>
                    <fullName>Change in Family Status</fullName>
                </value>
                <value>
                    <fullName>Closer to Work</fullName>
                </value>
                <value>
                    <fullName>Community Policies</fullName>
                </value>
                <value>
                    <fullName>Construction Noise/Delays</fullName>
                </value>
                <value>
                    <fullName>Corporate Lease</fullName>
                </value>
                <value>
                    <fullName>Death or Illness</fullName>
                </value>
                <value>
                    <fullName>Employment/Job Transfer</fullName>
                </value>
                <value>
                    <fullName>Financial/Lost Job</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Neighbor Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Rented Condo/Home</fullName>
                </value>
                <value>
                    <fullName>Roommate</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotiated_Improvements__c</fullName>
        <label>Negotiated Improvements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Lease_End_Date__c</fullName>
        <label>New Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Lease_Start_Date__c</fullName>
        <label>New Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Renewed_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New (Renewed) Lease</label>
        <referenceTo>Tenant_Card__c</referenceTo>
        <relationshipLabel>Renewals (New (Renewed) Lease)</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Rent__c</fullName>
        <label>Proposed New Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Month_Lease_End__c</fullName>
        <formula>IF(   Month_Lease_End_Date__c  =   Month_Next_Month__c   , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Month Lease End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>PM Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Not Renew</fullName>
                </value>
                <value>
                    <fullName>Transfer to other IH property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_Date__c</fullName>
        <formula>Lease__r.Notice_Date__c</formula>
        <label>Notice Date (from Yardi)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_to_Vacate_Due_Date__c</fullName>
        <label>Notice to Vacate Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opted_out_for_PointCentral_Cancel_Date__c</fullName>
        <label>Opted out for PointCentral Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Occupants_Details__c</fullName>
        <inlineHelpText>Should include the information needed by the Leasing Coordinator in order to add the other occupants to the lease.</inlineHelpText>
        <label>Other Occupants Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Occupants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Occupants?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Asset_Score__c</fullName>
        <formula>Portfolio__r.Overall_Asset_Score__c</formula>
        <inlineHelpText>Score from 1 to 5 averaging the Property and Location Score</inlineHelpText>
        <label>Overall Asset Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Alert_Lease_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to trigger an email to the PM alerting them that the lease has been executed.</inlineHelpText>
        <label>PM Alert - Lease Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <formula>IF(ISBLANK(Portfolio__r.Owner:Queue.QueueName),Portfolio__r.Owner:User.Full_Name__c,Portfolio__r.Owner:Queue.QueueName)</formula>
        <label>PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Release_Sent__c</fullName>
        <label>Personal Property Release Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Release_Signed__c</fullName>
        <label>Personal Property Release Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Primary__c</fullName>
        <formula>Lease__r.Phone_primary__c</formula>
        <label>Resident Phone (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointCentral_Resident_Acc_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PointCentral Resident - Acc Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Submarket__c</fullName>
        <formula>Portfolio__r.Submarket__c</formula>
        <label>Portfolio Submarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Acq_Rekey_Date__c</fullName>
        <formula>Portfolio__r.Post_Acq_Rekey_Date__c</formula>
        <label>Post Acq Rekey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Move_Out_Inspections_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Move Out Inspections Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Move_Out_Inspections__c</fullName>
        <formula>IF(Post_Move_Out_Inspections_Requested__c==TRUE, &apos;Requested&apos;, &apos;Declined&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Move Out Inspections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Move_Out_Inspection_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field also exists on Rehab as a formula reflecting this field&apos;s value.</inlineHelpText>
        <label>Pre Move Out Inspection Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Move_Out_Inspections_requested__c</fullName>
        <description>This formula Text field is to check the number of pre-move out inspections requested</description>
        <formula>IF(Pre_Move_Out_Inspection_Requested__c==TRUE, &apos;Requested&apos;, &apos;Declined&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Move Out Inspections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Term_Lease_Expiration_Reason__c</fullName>
        <inlineHelpText>The &quot;Lease Terminated (Eviction/Skip)&quot; Status should only be selected in circumstances where the property was vacated prior to lease expiration and consequently did not have an opportunity to renew.  If you select this,  you must indicate the reason why.</inlineHelpText>
        <label>Early Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Renewal_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Early Lease Termination / Buy-Out</fullName>
                </value>
                <value>
                    <fullName>Eviction</fullName>
                </value>
                <value>
                    <fullName>Management Decision</fullName>
                </value>
                <value>
                    <fullName>Military Deployment</fullName>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Month_End_Date__c</fullName>
        <formula>IF(   Month_Lease_End_Date__c  =   Month_Last_Month__c   , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Month End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Incentive_Cost__c</fullName>
        <label>Promotion/Incentive Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>IF(LEN(Portfolio__r.Property_Street__c)&gt;0, Portfolio__r.Property_Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; 
IF(LEN(Portfolio__r.Property_City__c)&gt;0, Portfolio__r.Property_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp; 
IF(LEN(Portfolio__r.Property_State__c)&gt;0, Portfolio__r.Property_State__c&amp; &quot; &quot; , &quot;&quot; )&amp; 
IF(LEN(Portfolio__r.Property_Zip_Code__c)&gt;0, Portfolio__r.Property_Zip_Code__c,&quot;&quot;)</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Score__c</fullName>
        <formula>Portfolio__r.Property_Score__c</formula>
        <inlineHelpText>Score from 1 to 5 describing the physical structure of the asset, with 1 being the lowest and 5 being the highest</inlineHelpText>
        <label>Property Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_New_Rent_Year_2__c</fullName>
        <description>As some markets are going to offer 2-year leases as renewal, and thus we can track what is being proposed with resident with this field.</description>
        <label>Proposed New Rent Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_WF__c</fullName>
        <label>Region_WF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Portfolio__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Lease_ID__c</fullName>
        <formula>Lease__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Lease ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Close_Date__c</fullName>
        <inlineHelpText>If the resident is renewing or transferring to another property  this field should represent the day the paperwork was signed. If the resident is not renewing, this date should be filled out after the move-out is complete</inlineHelpText>
        <label>Renewal Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the person on point to work with the PM to prepare the lease and assist with other aspects of the renewal?</inlineHelpText>
        <label>Renewal Coordinator / APM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Incentive_Notes__c</fullName>
        <label>Renewal Incentive Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Lease_Uploaded_Date__c</fullName>
        <label>Renewal Lease Uploaded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Lease_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Lease Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Objections__c</fullName>
        <label>Renewal Objections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Status_Bucket__c</fullName>
        <formula>CASE(Renewal_Status__c ,
&quot;Open&quot; , &quot;Open&quot;,
&quot;Lease Renewed&quot;, &quot;Lease Renewed&quot;,
&quot;Not Renewed - Notice&quot;, &quot;Not Renewed&quot;,
&quot;Not Renewed - Moved Out&quot;, &quot;Not Renewed&quot;,
&quot;Not Renewed - Transfer to IH Property&quot;, &quot;Transfer&quot;,
&quot;Lease Terminated (Eviction/Skip/Etc.)&quot;, &quot;Not Eligible&quot;,
&quot;Month-to-Month&quot;, &quot;Month-to-Month&quot;,
&quot;Eviction in Process&quot;, &quot;Not Eligible&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Status Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Status_Comments__c</fullName>
        <label>Renewal Status Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Lease Renewed</fullName>
                    <color>#78C953</color>
                    <label>Lease Renewed</label>
                </value>
                <value>
                    <fullName>Not Renewed - Notice</fullName>
                    <color>#E27001</color>
                    <label>Not Renewed - Notice</label>
                </value>
                <value>
                    <fullName>Not Renewed - Moved Out</fullName>
                    <color>#A845DC</color>
                    <label>Not Renewed - Moved Out</label>
                </value>
                <value>
                    <fullName>Not Renewed - Transfer to IH Property</fullName>
                    <color>#F3D904</color>
                    <label>Not Renewed - Transfer to IH Property</label>
                </value>
                <value>
                    <fullName>Lease Terminated (Eviction/Skip/Etc.)</fullName>
                    <color>#A53711</color>
                    <label>Lease Terminated (Eviction/Skip/Etc.)</label>
                </value>
                <value>
                    <fullName>Month-to-Month</fullName>
                    <color>#66E9BD</color>
                    <label>Month-to-Month</label>
                </value>
                <value>
                    <fullName>Eviction in Process</fullName>
                    <color>#0B24BE</color>
                    <label>Eviction in Process</label>
                </value>
                <value>
                    <fullName>&gt;120 Days Out</fullName>
                    <color>#419249</color>
                    <label>&gt;120 Days Out</label>
                </value>
                <value>
                    <fullName>Property - Sold</fullName>
                    <color>#0B6FCE</color>
                    <label>Property - Sold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewed_Lease_Admin_Fee_Yardi__c</fullName>
        <formula>New_Renewed_Lease__r.Admin_Fee__c</formula>
        <label>Renewed Lease Admin Fee (Yardi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewed_Lease_End_Yardi__c</fullName>
        <formula>New_Renewed_Lease__r.Lease_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed Lease End (Yardi)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewed_Lease_Housing_Rent_Yardi__c</fullName>
        <formula>New_Renewed_Lease__r.Housing_Rent__c</formula>
        <label>Renewed Lease Housing Rent (Yardi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewed_Lease_Rent_Yardi__c</fullName>
        <formula>New_Renewed_Lease__r.Lease_Rent__c</formula>
        <label>Renewed Lease Rent (Yardi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewed_Lease_Start_Yardi__c</fullName>
        <formula>New_Renewed_Lease__r.Lease_From_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed Lease Start (Yardi)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Strategy_Comments__c</fullName>
        <label>Rent Strategy Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resident_Decline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field also exists on Rehab as a formula reflecting this field&apos;s value.</inlineHelpText>
        <label>Resident Decline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resident_Email__c</fullName>
        <formula>Lease__r.Email__c</formula>
        <label>Resident Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Initial_Rent__c</fullName>
        <inlineHelpText>What was the resident’s initial rent at the time of first lease</inlineHelpText>
        <label>Resident Initial Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resident_Intent__c</fullName>
        <label>Resident Intent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move-Out</fullName>
                </value>
                <value>
                    <fullName>MTM</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Resident Undecided</fullName>
                </value>
                <value>
                    <fullName>Transfer to another IH home</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resident_Name__c</fullName>
        <formula>Lease__r.First_Last_Name__c</formula>
        <label>Resident Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Notice_to_Vacate_Recv_d_Date__c</fullName>
        <label>Resident Notice Vacate Recv&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resident_Phone_Secondary__c</fullName>
        <formula>Lease__r.Phone_secondary__c</formula>
        <label>Resident Phone (Secondary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Renewal_Requirements__c</fullName>
        <label>Resident Renewal Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resident_Violations__c</fullName>
        <label># Resident Violations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Workflow__c</fullName>
        <label>Run Workflow</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Candidate__c</fullName>
        <formula>Portfolio__r.S1_Candidate__c</formula>
        <inlineHelpText>This field is editable on the related Portfolio record.</inlineHelpText>
        <label>S1 Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_Out_Date__c</fullName>
        <label>Scheduled Move-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Due__c</fullName>
        <description>This field is populated via workflow.</description>
        <inlineHelpText>90 days from Lease End Date.</inlineHelpText>
        <label>90-Day Letter Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Notes__c</fullName>
        <label>90-Day Letter Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Notice_Sent__c</fullName>
        <label>90-Day Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Securitization_Pool__c</fullName>
        <formula>TEXT(Portfolio__r.Securitization_Pool__c)</formula>
        <label>Securitization Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_First_Notice__c</fullName>
        <formula>IF(NOT(ISBLANK( First_Contact_Notice_Sent__c)), TRUE, FALSE)</formula>
        <label>Made 90-120 day Warm call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Fourth_Notice__c</fullName>
        <formula>IF(NOT(ISBLANK( Fourth_Contact_Notice_Sent__c )), TRUE, FALSE)</formula>
        <label>Sent 45-Day Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Second_Notice__c</fullName>
        <formula>IF(NOT(ISBLANK( Second_Contact_Notice_Sent__c )), TRUE, FALSE)</formula>
        <label>Sent 90-Day Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Third_Notice__c</fullName>
        <formula>IF(NOT(ISBLANK( Third_Contact_Notice_Sent__c )), TRUE, FALSE)</formula>
        <label>Sent 75-Day Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Stipulations__c</fullName>
        <label>Special Stipulations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stipulation_Description__c</fullName>
        <label>Stipulation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIP_Formula__c</fullName>
        <formula>IF( Lease_Start_Date__c &lt;= Acquisition_Date__c, &apos;Acquired Lease&apos;, 
IF( Lease_Start_Date__c &gt; Post_Acq_Rekey_Date__c, &apos;IH Lease&apos;, 
&apos;TIP Lease&apos;))</formula>
        <label>TIP Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_Leases__c</fullName>
        <formula>IF( TIP_Formula__c = &quot;TIP Lease&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIP Leases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Contact_Notes__c</fullName>
        <label>30 Days Prior to NTV Letter &amp; Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Contact_Notice_Sent__c</fullName>
        <label>30 Days Prior to NTV Letter &amp; Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Notice_Due_Date__c</fullName>
        <description>This field is populated via workflow.</description>
        <inlineHelpText>60 days from Lease End Date.</inlineHelpText>
        <label>30 Days Prior to NTV Letter &amp; Call Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_to_Send_Renewal_Lease_Days__c</fullName>
        <formula>Lease_Renewal_Sent_Date__c - Date_Time_Comments_Last_Update__c</formula>
        <label>Time to Send Renewal Lease (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Upload_Renewal_Lease_Days__c</fullName>
        <formula>Renewal_Lease_Uploaded_Date__c - DATETIMEVALUE(Lease_Documents_Completed__c)</formula>
        <label>Time to Upload Renewal Lease (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Months_in_Home__c</fullName>
        <formula>IF(NOT(ISBLANK( Lease__r.Lease_End_Date__c )) &amp;&amp; NOT(ISBLANK(Lease__r.Move_In_Date__c))
     ,(((YEAR(TODAY()) - YEAR(Lease__r.Move_In_Date__c) - 1) *12) + (12 - MONTH(Lease__r.Move_In_Date__c) +1) + MONTH(TODAY()))
     , null
)</formula>
        <inlineHelpText>Today minus Move-in Date.  Note: This field is based on Move-in Date in Yardi and doesn&apos;t reflect time in home prior to IH Acquisition, if applicable.</inlineHelpText>
        <label>Total Months Since Move-In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rent__c</fullName>
        <description>This field is the Total Rent which is populated as the sum of Lease Rent and Housing Rent. See D-00013664</description>
        <formula>Lease_Rent__c + Housing_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Requirements__c</fullName>
        <label>Transfer Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UW_Rent__c</fullName>
        <formula>Portfolio__r.Exp_Gross_Monthly_Rent_UW__c</formula>
        <label>UW Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unadjusted_CMA_Rent__c</fullName>
        <inlineHelpText>This field also appears as an editable field on Listing.</inlineHelpText>
        <label>Unadjusted CMA Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Last_to_Update_Comments__c</fullName>
        <label>User Last to Update Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPO_Rent_Approval_Comments__c</fullName>
        <label>VPO Rent Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VPO_Rent_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO Rent Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Rent_Approved_Date_Time__c</fullName>
        <label>VPO Rent Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Variance_Actual_to_Proposed_New_Percent__c</fullName>
        <formula>(New_Rent__c/Actual_Lease_Amount_from_Yardi__c)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - Actual to Proposed New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>